# tensorboard-logger-ros

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  dev_setup.sh  package.xml
include/tensorboard_logger_ros/: TensorBoardLoggerServer.h
msg/: Scalar.msg
src/: tensorboard_logger.cc  try_TensorBoardLoggerServer.cpp
tensorboard-logger-ros/: CMakeLists.txt  package.xml
tensorboard_logger_ros/: CMakeLists.txt
tensorboard_logger_ros/include/tensorboard_logger_ros/: TensorBoardLoggerServer.h
tensorboard_logger_ros/launch/: TensorBoardLoggerServer.launch
tensorboard_logger_ros/src/: TensorBoardLoggerServer.cpp  TensorBoardLoggerServer_node.cpp  try_TensorBoardLoggerServer.cpp
tensorboard_logger_ros/srv/: ScalarToBool.srv
tests/: test_tensorboard_logger.cc
